--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -13,5 +13,8 @@
       span.footer-separator |
       span= _p('footer.theme') + ' '
       a(href='https://github.com/jerryc127/hexo-theme-butterfly')= 'Butterfly'
-  if theme.footer.custom_text
-    .footer_custom_text!=`${theme.footer.custom_text}`
+  - var custom_text = ''
+  for t in theme.footer.custom_text
+    custom_text!=`${custom_text} ${t}`
+  
+  .footer_custom_text!=`${custom_text}`
