调整主题配置，修改中文字体

--- a/themes/cactus/source/css/_variables.styl
+++ b/themes/cactus/source/css/_variables.styl
@@ -1,6 +1,6 @@
 // Fonts
-$font-family-body = "Menlo", "Meslo LG", monospace
-$font-family-mono = "Menlo", "Meslo LG", monospace
+$font-family-body = "Menlo", "Meslo LG", "Microsoft Yahei", monospace
+$font-family-mono = "Menlo", "Meslo LG", "Microsoft Yahei", monospace
 $font-size = 14px
 $line-height = 1.725
 $page-width = 0rem + (hexo-config("page_width") || 39)
